<resources>
    <string name="app_name" translatable="false">TachiyomiJ2K</string>
    <string name="app_short_name" translatable="false">TachiJ2K</string>
    <string name="all_files_permission_required">File permissions required</string>
    <string name="external_storage_permission_notice">TachiyomiJ2K requires access to all files in Android 11 to download chapters, create automatic backups, and read local series. \n\nOn the next screen, enable \"Allow access to manage all files.\"</string>
    <string name="external_storage_download_notice">TachiyomiJ2K requires access to all files to download chapters. Tap here, then enable \"Allow access to manage all files.\"</string>
    <string name="manga">Manga</string>
    <string name="manhwa">Manhwa</string>
    <string name="manhua">Manhua</string>
    <string name="comic">Comic</string>
    <string name="webtoon">Webtoon</string>
    <string name="library_entries">Library entries</string>
    <string name="not_started">Not started</string>
    <string name="in_progress">In progress</string>
    <string name="read">Read</string>
    <string name="title">Title</string>
    <string name="author">Author</string>
    <string name="artist">Artist</string>
    <string name="description">Description</string>
    <string name="move_x_to">Move %1$s to…</string>
    <string name="add_x_to">Add %1$s to…</string>
    <string name="ongoing">Ongoing</string>
    <string name="unknown">Unknown</string>
    <string name="unknown_status">Unknown Status</string>
    <string name="licensed">Licensed</string>
    <string name="completed">Completed</string>
    <string name="publishing_finished">Publishing finished</string>
    <string name="cancelled">Cancelled</string>
    <string name="on_hiatus">On hiatus</string>
    <string name="unlock_library">Unlock to access Library</string>
    <string name="unlock">Unlock</string>
    <string name="lock_with_biometrics">Require unlock</string>
    <string name="lock_when_idle">Lock when idle</string>
    <string name="chapters">Chapters</string>
    <string name="new_chapters">New chapters</string>
    <string name="unread">Unread</string>
    <string name="last_read_chapter_">Last read Chapter %1$s</string>
    <string name="chapter_">Chapter %1$s</string>
    <string name="chapter_x_of_y">Chapter %1$d of %2$d</string>
    <string name="all_chapters_read">All chapters read</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="not_bookmarked">Not bookmarked</string>
    <string name="marked_as_read">Marked as read</string>
    <string name="marked_as_unread">Marked as unread</string>
    <string name="removed_bookmark">Removed bookmark</string>
    <string name="chapters_removed">Chapters removed.</string>
    <string name="chapter_not_found">Chapter not found</string>
    <string name="local_invalid_format">Invalid chapter format</string>
    <string name="order_by">Order by</string>
    <string name="no_chapters_error">No chapters found</string>
    <string name="no_pages_found">No pages found</string>
    <string name="loader_rar5_error">RARv5 format is not supported</string>
    <string name="remove_all_downloads">Remove all downloads?</string>
    <string name="no_chapters_to_delete">No chapters to delete</string>
    <string name="by_source_order">By source\'s order</string>
    <string name="by_chapter_number">By chapter number</string>
    <string name="by_update_date">By upload date</string>
    <string name="scanlators">Scanlators</string>
    <plurals name="remove_n_chapters">
        <item quantity="one">Remove %1$d downloaded chapter?</item>
        <item quantity="other">Remove %1$d downloaded chapters?</item>
    </plurals>
    <plurals name="chapters_plural">
        <item quantity="one">%1$s chapter</item>
        <item quantity="other">%1$s chapters</item>
    </plurals>
    <plurals name="pages_left">
        <item quantity="one">%1$d page left</item>
        <item quantity="other">%1$d pages left</item>
    </plurals>
    <plurals name="num_sources">
        <item quantity="one">%1$d source</item>
        <item quantity="other">%1$d sources</item>
    </plurals>
    <plurals name="num_pages">
        <item quantity="one">%1$d page</item>
        <item quantity="other">%1$d pages</item>
    </plurals>
    <string name="category">Category</string>
    <string name="categories">Categories</string>
    <string name="adding_category_to_queue">Adding %1$s to update queue</string>
    <string name="_already_in_queue">%1$s is already in queue</string>
    <string name="create_new_category">Create new category</string>
    <string name="new_category">New category</string>
    <string name="category_is_empty">Category is empty</string>
    <string name="show_categories_while_filtering">Show empty categories while filtering</string>
    <string name="no_matches_for_filters_short">No matches for your filters</string>
    <string name="default_category">Default category</string>
    <string name="confirm_category_deletion">Delete category?</string>
    <string name="confirm_category_deletion_message">Entries in this category will moved into the
        default category.</string>
    <string name="already_in_category">Entry already in category</string>
    <string name="add_categories">Add categories</string>
    <string name="add_edit_categories">Add/Edit categories</string>
    <string name="edit_categories">Edit categories</string>
    <string name="manage_category">Manage category</string>
    <string name="move_to_categories">Move to categories</string>
    <plurals name="category_plural">
        <item quantity="one">%d category</item>
        <item quantity="other">%d categories</item>
    </plurals>
    <string name="category_with_name_exists">A category with that name already exists!</string>
    <string name="category_cannot_be_blank">Category name cannot be blank</string>
    <string name="category_deleted">Category deleted</string>
    <string name="long_press_category">Press and hold to edit a category</string>
    <string name="jump_to_category">Jump to category</string>
    <string name="update">Update</string>
    <string name="updating_">Updating %1$s</string>
    <string name="update_available">Update available</string>
    <string name="new_version_available">New version available!</string>
    <string name="new_beta_version_available">New beta version available!</string>
    <string name="no_new_updates_available">No new updates available</string>
    <string name="searching_for_updates">Searching for updates…</string>
    <string name="release_page">Release page</string>
    <string name="could_not_install_update">Could not install update</string>
    <string name="update_completed">Update completed</string>
    <string name="library">Library</string>
    <string name="your_library">Your library</string>
    <string name="updating_library">Updating library</string>
    <string name="selected_">Selected: %1$d</string>
    <string name="local">Local</string>
    <string name="library_search_hint">Search title, tags, source</string>
    <string name="library_search_filters">Show entries that…</string>
    <string name="library_optional_search_filters">Show entries that optionally…</string>
    <string name="search_operator_and">Include</string>
    <string name="search_operator_not">Exclude</string>
    <string name="search_toggle_optional">Make this filter optional</string>
    <string name="search_exactly">Exactly</string>
    <string name="search_between">Between</string>
    <string name="search_more_than">More than</string>
    <string name="search_less_than">Less than</string>
    <string name="search_fewer_than">Fewer than</string>
    <string name="search_after">After</string>
    <string name="search_before">Before</string>
    <string name="library_is_empty_add_from_browse">Your library is empty, add series to your
        library from the browse tab.</string>
    <string name="no_matches_for_filters">No matches found for your current filters</string>
    <string name="getting_started_guide">Getting started guide</string>
    <string name="show_all_categories">Show all categories</string>
    <string name="move_dynamic_to_bottom">Move collapsed dynamic categories to bottom</string>
    <string name="show_number_of_items">Show number of items</string>
    <string name="when_grouping_by_sources_tags">When grouping library by sources, status, etc.</string>
    <string name="always_show_current_category">Always show current category</string>
    <string name="category_hopper_long_press">Category hopper long-press action</string>
    <string name="expand_collapse_all_categories">Expand/collapse all categories</string>
    <string name="open_random_series">Open a random series</string>
    <string name="expand_all_categories">Expand all categories</string>
    <string name="collapse_all_categories">Collapse all categories</string>
    <string name="reorder_filters">Reorder filters</string>
    <string name="_unread">%d unread</string>
    <string name="search_globally">Search \"%1$s\" globally</string>
    <string name="read_progress">Read progress</string>
    <string name="series_type">Series type</string>
    <string name="series">Series</string>
    <string name="group_library_by">Group library by…</string>
    <string name="tracking_status">Tracking status</string>
    <string name="ungrouped">Ungrouped</string>
    <string name="sort_by">Sort by</string>
    <string name="total_chapters">Total chapters</string>
    <string name="date_added">Date added</string>
    <string name="last_read">Last read</string>
    <string name="date_fetched">Date fetched</string>
    <string name="latest_chapter">Latest chapter</string>
    <string name="drag_and_drop">Drag &amp; Drop</string>
    <string name="display_options">Display options</string>
    <string name="can_be_found_in_library_filters">Can also be found by expanding library filters</string>
    <string name="list">List</string>
    <string name="comfortable_grid">Comfortable Grid</string>
    <string name="cover_only_grid">Cover-only grid</string>
    <string name="compact_grid">Compact Grid</string>
    <string name="download_badge">Download badges</string>
    <string name="language_badge">Language badges</string>
    <string name="hide_start_reading_button">Hide start reading button</string>
    <string name="badges">Badges</string>
    <string name="uniform_grid_covers">Uniform grid covers</string>
    <string name="use_staggered_grid">Use staggered grid</string>
    <string name="reading_mode">Reading mode</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="show_page_number">Show page number</string>
    <string name="keep_screen_on">Keep screen on</string>
    <string name="background_color">Background color</string>
    <string name="always_show_chapter_transition">Always show chapter transition</string>
    <string name="vertical_seekbar">Use vertical progress bar for</string>
    <string name="vertical_seekbar_dock_left">Place vertical bar</string>
    <string name="vertical_seekbar_height">Vertical bar height</string>
    <string name="general">General</string>
    <string name="share_crash_logs">Share crash logs</string>
    <string name="crash_screen_title">Whoops!</string>
    <string name="crash_screen_description">%s ran into an unexpected error. You can share the crash logs to help track down the issue.</string>
    <string name="crash_screen_restart_application">Restart the application</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="apply">Apply</string>
    <string name="clear_filters">Clear filters</string>
    <string name="close">Close</string>
    <string name="filter">Filter</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="orientation">Orientation</string>
</resources>