<?xml version="1.0" encoding="utf-8"?>
<eu.kanade.tachiyomi.ui.reader.settings.ReaderGeneralView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:background="@drawable/bottom_sheet_rounded_background"
    android:forceDarkAllowed="false">

    <LinearLayout
        android:id="@+id/constraint_layout"
        style="@style/BottomSheetDialogTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingStart="@dimen/material_component_dialogs_padding_around_content_area"
        android:paddingTop="0dp"
        android:paddingEnd="@dimen/material_component_dialogs_padding_around_content_area">

        <com.google.android.material.textview.MaterialTextView
            style="?textAppearanceTitleSmall"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:textColor="?attr/colorSecondary"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/series" />

        <eu.kanade.tachiyomi.widget.MaterialSpinnerView
            android:id="@+id/viewer_series"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:title="@string/reading_mode"
            android:entries="@array/viewers_selector" />

        <eu.kanade.tachiyomi.widget.MaterialSpinnerView
            android:id="@+id/rotation_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:title="@string/orientation"
            android:entries="@array/rotation_type" />

        <com.google.android.material.textview.MaterialTextView
            style="?textAppearanceTitleSmall"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:textColor="?attr/colorSecondary"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/general" />

        <eu.kanade.tachiyomi.widget.MaterialSpinnerView
            android:id="@+id/background_color"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:title="@string/background_color" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/show_page_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/show_page_number"
            android:textColor="?attr/colorOnBackground" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/fullscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/fullscreen"
            android:textColor="?attr/colorOnBackground" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/keepscreen"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/keep_screen_on"
            android:textColor="?attr/colorOnBackground" />

        <com.google.android.material.materialswitch.MaterialSwitch
            android:id="@+id/always_show_chapter_transition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/always_show_chapter_transition"
            android:textColor="?attr/colorOnBackground" />

        <com.google.android.material.textview.MaterialTextView
            style="?textAppearanceTitleSmall"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:textColor="?attr/colorSecondary"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/vertical_seekbar" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="-24dp"
            android:layout_marginEnd="-24dp"
            android:paddingStart="24dp"
            android:paddingEnd="24dp"
            android:clipToPadding="false"
            android:layout_marginTop="4dp"
            android:scrollbars="none">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/vertical_seekbar_modes"
                style="@style/Widget.Tachiyomi.MaterialButtonGroup.Connected"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:spacing="4dp"
                android:orientation="horizontal"/>
        </HorizontalScrollView>

        <LinearLayout
            android:id="@+id/vertical_seekbar_extra_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/vertical_seekbar_height_text"
                    style="?textAppearanceBodyMedium"
                    android:textSize="15sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="@string/vertical_seekbar_height" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/vertical_seekbar_height"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="12dp"
                    android:valueFrom="60"
                    android:valueTo="100"
                    android:stepSize="5"
                    tools:value="65" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">
                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/place_vertical_seekbar_text"
                    style="?textAppearanceBodyMedium"
                    android:textSize="15sp"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/vertical_seekbar_dock_left" />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/vertical_seekbar_placement"
                    style="@style/Widget.Tachiyomi.MaterialButtonGroup.Connected"
                    android:layout_width="wrap_content"
                    app:singleSelection="true"
                    app:selectionRequired="true"
                    android:layoutDirection="ltr"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:layout_marginStart="12dp"
                    android:spacing="4dp"
                    android:orientation="horizontal">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/place_left_button"
                        app:toggleCheckedStateOnClick="true"
                        style="@style/Widget.Tachiyomi.Button.OutlinedButton.Icon"
                        android:layout_marginEnd="4dp"
                        tools:checked="true"
                        android:text="@string/left" />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/place_right_button"
                        app:toggleCheckedStateOnClick="true"
                        style="@style/Widget.Tachiyomi.Button.OutlinedButton.Icon"
                        android:layout_marginEnd="4dp"
                        tools:checked="false"
                        android:text="@string/right" />
                </com.google.android.material.button.MaterialButtonToggleGroup>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</eu.kanade.tachiyomi.ui.reader.settings.ReaderGeneralView>