<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/source_filter_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bottom_sheet_rounded_background"
    app:layout_constraintVertical_chainStyle="packed"
    android:backgroundTint="?attr/background">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/category_recycler_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        app:layout_constraintTop_toBottomOf="@id/title_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_layout"
        tools:itemCount="3"
        tools:listitem="@layout/expanded_filter_item"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:layout_gravity="top"
        android:background="@drawable/bottom_sheet_rounded_background"
        android:backgroundTint="?attr/colorSurface"
        android:elevation="0dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/category_recycler_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/toolbar_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/filter"
            style="?textAppearanceTitleMedium"
            android:textColor="?actionBarTintColor"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/reorder_filters_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/reorder_filters_button"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="textStart"
            app:icon="@drawable/ic_swap_vert_24dp"
            style="@style/Widget.Material3Expressive.Button.TextButton"
            android:textColor="?attr/colorPrimary"
            app:iconTint="?attr/colorPrimary"
            app:layout_constraintStart_toEndOf="@id/toolbar_title"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/close_button"
            android:text="@string/reorder_filters" />

        <ImageView
            android:id="@+id/close_button"
            style="@style/Theme.Widget.CustomImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:contentDescription="@string/close"
            android:padding="5dp"
            android:src="@drawable/ic_close_24dp"
            app:tint="?actionBarTintColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/reorder_filters_button"
            app:layout_constraintTop_toTopOf="parent"
            android:tooltipText="@string/close" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/divider"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/bottom_sheet_rounded_background"
        android:backgroundTint="?attr/colorSurface"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/category_recycler_view">

        <View
            android:id="@+id/bottom_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/divider"/>

        <com.google.android.material.button.MaterialButtonGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="6dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/clear_filters_button"
                style="?materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear_filters" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apply_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/apply"
                android:minWidth="150dp" />
        </com.google.android.material.button.MaterialButtonGroup>

        <View
            android:id="@+id/bottom_spacer"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>